# vid2subs

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml
docs/: m2m100_lang_codes.md
prompts/: llm_chunk_summary_prompt.md  llm_global_prompt_from_summaries.md  llm_short_text_prompt.md  llm_translation_prompt.md
scripts/: prepare-ffmpeg-assets.js
src/vid2subs/: __init__.py  cli.py  config.py  env.py  langdetect.py  pipeline.py
src/vid2subs/asr/: __init__.py  base.py  factory.py  nemo_engine.py  sensevoice_engine.py  types.py
src/vid2subs/audio/: __init__.py  extractor.py
src/vid2subs/segmentation/: __init__.py  sentence_segmenter.py
src/vid2subs/subtitles/: __init__.py  ass_writer.py  srt_writer.py  types.py
src/vid2subs/translate/: __init__.py  factory.py  google_translator.py  llm_translator.py  m2m_translator.py  translator.py
src/vid2subs/web/: __init__.py  app.py  dependencies.py
src/vid2subs/web/templates/: index.html  result.html
